fix(suiteheader): icon vertical alignment
#3694

--- a/packages/react/src/components/SuiteHeader/_suite-header.scss
+++ b/packages/react/src/components/SuiteHeader/_suite-header.scss
@@ -324,6 +324,17 @@
       display: flex;
       align-items: center;
     }
+
+    .#{$prefix}--header-action-btn.#{$prefix}--btn--primary {
+      background-color: unset;
+    }
+
+    & > *:nth-last-child(2),
+    & > *:nth-last-child(3) {
+      .#{$prefix}--header__menu-title {
+        padding-top: $spacing-02;
+      }
+    }
   }
 
   .#{$iot-prefix}--header__subtitle {
